<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/E"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colorx"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/buttonCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="Camera" />

        <Button
            android:id="@+id/buttonCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="Canvas" />

    </FrameLayout>
    
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:visibility="gone" >

        <Button
            android:id="@+id/button_colorx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

</FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"            
            android:layout_weight="1" >

            <Button
                android:id="@+id/buttonA1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_color_size_tt"
                android:textSize="20sp" />

        </FrameLayout>

<FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"            
            android:layout_weight="1" >

    <Button
        android:id="@+id/buttonSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/spinner_tt"
        android:textSize="40sp" />

</FrameLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1" >

    <Button
        android:id="@+id/buttonRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/radio_tt"
        android:textSize="40sp" />

</FrameLayout>

<FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"            
            android:layout_weight="1" >

        <Button
            android:id="@+id/buttonA3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/web_tt"
            android:textSize="20sp" >
</Button>

        <Button
            android:id="@+id/buttonWiki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:text="@string/wiki_tt" />

        <Button
            android:id="@+id/buttonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="List" />

</FrameLayout>

    </LinearLayout>




   